# FlightGear-Interpreter

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  DefineVarCommand.cpp  DefineVarCommand.h  IfCommand.h  Lexer.cpp  Lexer.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  PrintCommand.h  README.md  Server.cpp  Server.h  SleepCommand.cpp  SymbolTable.cpp  SymbolTable.h  Var.h  WhileCommand.cpp  ex1.h  fly.txt  main.cpp
